2008-10-13
  * Fixed a bug in email_header formating. When an email2trac ticket 
    was updated via the web interface it would trigger a description 
    field update.

    Fixed by: Bas van der Vlies

  * Reopen closed ticket if an update is received via email, closes #70
    Requested by: Garrett McGrath gmcgrath add princeton dot edu
    Fixed by: Bas van der Vlies


  * The [DEFAULT] section did not work any more due to change to internal
    trac parser, closes ticket #73
    Reported by: email2trac at bulk dot squeakyblue dot com
    Fixed by: Bas van der Vlies
   
  * black_list paramter must be comma-separated as mentioned in the 
    documentation (#75) and removed the default value 
    "MAILER-DAEMON@" (#74)
    Reported by: email2trac at bulk dot squeakyblue dot com
    Fixed by: Bas van der Vlies

  * If a blank email is sent with just an attachment, a blank 
    comment is appended to the comments. fixed closes #89

    Reported/Fixed by: ???
    Applied by: Bas van der Vlies

  * added white_list parameter.  If set then only mail is accepted if
    sender matches.
    Author: Bas van der Vlies, jon dot wbstr at gmail dot com

  * added recipient_list parameter.  If set then only mail is accepted if
    to-field matches. This only uses when people use a drop box to accept
    emai for several email addresses, (closes #77)
    Author: Bas van der Vlies, jon dot wbstr at gmail dot com

  * alternate notify template did not work for trac version 0.11 
    (#90).
    Reported/Fixed by: hju at jochenkuhl dot de
    Applied by       : Bas van der Vlies

  * added 'alternate_notify_template_update'. When set this notify 
    template name will be used for ticket updates (#90).
    Author: Bas van der Vlies, hju at jochenkuhl dot de
    
   
2008-05-30
  * Fixed debian control file. Package can be build on any platform and
    not only on i386 platforms:

    Author: Christian Iversen ci add sikkerhed dot org
    Applied by: Bas van der Vlies
